--- a/mahafidz/assets/style/style.css
+++ b/mahafidz/assets/style/style.css
@@ -3,6 +3,12 @@ a {
   color: inherit;
 }
 
+.remove-bullet ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 .navbar-warna {
   background-color: #212529 !important;
 }
@@ -250,4 +256,11 @@ div.image-client img:hover {
   width: 100%;
   height: 100%;
   border: none;
+}
+
+/* Footer */
+.background-transparan {
+  background: linear-gradient(rgba(45, 59, 80, 0.9), rgba(45, 59, 80, 0.9)), url("../img/building.jpg") fixed center center;
+  background-size: cover;
+  /* padding: 50px; */
 }
