--- a/mahafidz/assets/style/style.css
+++ b/mahafidz/assets/style/style.css
@@ -227,9 +227,11 @@ div.image-client img {
   opacity: 0.7;
   transition: opacity 0.3s;
   filter: grayscale(100%);
+  transition: transform 0.8s; /* Animation */
 }
 
 div.image-client img:hover {
+  transform: scale(1.2);
   opacity: 1;
   filter: grayscale(0%);
 }
