--- a/mahafidz/assets/style/style.css
+++ b/mahafidz/assets/style/style.css
@@ -27,7 +27,16 @@ a {
   background-color: #f8f9fa;
   border-radius: 5px;
   border: 5px solid #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.post-artikel {
+  margin-bottom: 20px;
+  padding: 0px 15px;
+  background-color: #f8f9fa;
+  border-radius: 5px;
+  border: 5px solid #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
 .profil-border {
