--- a/mahafidz/assets/style/style.css
+++ b/mahafidz/assets/style/style.css
@@ -43,11 +43,6 @@ body {
   border: 10px solid #f8f9fa;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
-/* .profil-border-video {
-  border-radius: 5px;
-  border: 60px solid #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-} */
 
 .post img {
   max-width: 100%;
@@ -235,7 +230,7 @@ div.image-client img {
   opacity: 0.7;
   transition: opacity 0.3s;
   filter: grayscale(100%);
-  transition: transform 0.8s; /* Animation */
+  transition: transform 0.8s;
 }
 
 div.image-client img:hover {
@@ -276,7 +271,6 @@ div.image-client img:hover {
 .background-transparan {
   background: linear-gradient(rgba(45, 59, 80, 0.9), rgba(45, 59, 80, 0.9)), url("../img/building.jpg") fixed center center;
   background-size: cover;
-  /* padding: 50px; */
 }
 
 .image-container {
@@ -292,11 +286,11 @@ div.image-client img:hover {
 }
 
 .horizontal-carousel .carousel-item {
-  width: 100%; /* Adjust as needed */
+  width: 100%;
 }
 
 .horizontal-carousel #imageCarousel {
-  width: 100%; /* Adjust as needed */
+  width: 100%;
 }
 
 .horizontal-carousel .carousel-control-prev,
@@ -313,11 +307,10 @@ section.background-atas {
 }
 
 @media (max-width: 768px) {
-  /* Sesuaikan dengan breakpoint yang sesuai dengan perangkat seluler */
   .img-responsive {
-    width: 35000px; /* Pastikan gambar mengisi lebar maksimum */
-    max-width: 600px; /* Batasi lebar maksimum gambar */
-    height: auto; /* Biarkan tinggi gambar disesuaikan secara proporsional */
+    width: 35000px;
+    max-width: 600px;
+    height: auto;
   }
 }
 
@@ -700,8 +693,8 @@ section.background-atas {
     margin-bottom: 5px;
     margin-top: 0px;
     width: 428px;
-    max-width: 350px; /* Batasi lebar maksimum gambar */
-    height: auto; /* Biarkan tinggi gambar disesuaikan secara proporsional */
+    max-width: 350px;
+    height: auto;
   }
 
   .h3-font {
@@ -717,11 +710,10 @@ section.background-atas {
 }
 
 @media (max-width: 768px) {
-  /* Sesuaikan dengan breakpoint yang sesuai dengan perangkat seluler */
   .img-responsive {
-    width: 35000px; /* Pastikan gambar mengisi lebar maksimum */
-    max-width: 600px; /* Batasi lebar maksimum gambar */
-    height: auto; /* Biarkan tinggi gambar disesuaikan secara proporsional */
+    width: 35000px;
+    max-width: 600px;
+    height: auto;
   }
   .back-to-top {
     background-color: var(--primary) !important;
